--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">I am student from La Plata National University. Currently in 4th year. I've worked in spring boot projects with Java 11; fullstack web app with Jinja - Django - SQL stack; and a lot of small random projects. I love linux and open source projects.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">I love technology. Hardware enthusiastic. Taekwondo WT teacher. Amateur photographer. Nature lover. Rational thinker. With a lot of excitement to start a new professional phase.</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">I am a student from La Plata National University. Currently in 4th year. I've worked in spring boot projects with Java 11; fullstack web app with Flask - Django - SQL stack; and a lot of small random projects. I love linux and open source projects.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">I love technology. I am a hardware enthusiastic, taekwondo WT teacher, an amateur photographer, a nature lover and a rational thinker. I am full of excitement to start a new professional phase.</p></div>
                 </div>
             </div>
         </section>
@@ -89,10 +89,6 @@
                 </div>
             </div>
         </footer>
-        <!-- Copyright Section-->
-        <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Alejo 2022</small></div>
-        </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
